# napi-benchmark

./: README.md
cpp/: CMakeLists.txt  package.json  test.js
cpp/src/: main.cpp
napi_rs_benchmark/: Cargo.toml  index.d.ts  index.js  package.json  test.js
napi_rs_benchmark/npm/darwin-arm64/: README.md  package.json
napi_rs_benchmark/src/: lib.rs
neon_benchmark/: Cargo.toml  package.json  test.js
neon_benchmark/src/: lib.rs
